Apache Tez Change Log
=====================


Release 0.7.0: Unreleased

INCOMPATIBLE CHANGES
  TEZ-2176. Move all logging to slf4j. (commons-logging jar no longer part of Tez tar)

ALL CHANGES:
  TEZ-2213. For the ordered case, enabling pipelined shuffle should automatically disable final merge.
  TEZ-2204. TestAMRecovery increasingly flaky on jenkins builds.
  TEZ-2209. Fix pipelined shuffle to fetch data from any one attempt
  TEZ-2210. Record DAG AM CPU usage stats
  TEZ-2203. Intern strings in tez counters
  TEZ-2202. Fix LocalTaskExecutionThread ID to the standard thread numbering.
  TEZ-2059. Remove TaskEventHandler in TestDAGImpl
  TEZ-2191. Simulation improvements to MockDAGAppMaster
  TEZ-2195. TestTezJobs::testInvalidQueueSubmission/testInvalidQueueSubmissionToSession
    fail with hadoop branch-2.
  TEZ-1827. MiniTezCluster takes 10 minutes to shut down.
  TEZ-2178. YARN-3122 breaks tez compilation with hadoop 2.7.0.
  TEZ-2174. Make task priority available to TaskAttemptListener.
  TEZ-2169. Add NDC context to various threads and pools.
  TEZ-2171. Remove unused metrics code.
  TEZ-2001. Support pipelined data transfer for ordered output.
  TEZ-2170. Incorrect its in README.md.
  TEZ-2070. Controller class of output should be committer rather than initializer in DAG's dot file.
  TEZ-2083. Make PipelinedSorter as the default sorter.
  TEZ-1967. Add a monitoring API on DAGClient which returns after a time interval or on DAG final state change.
  TEZ-2130. Send the sessionToken as part of the AM CLC.
  TEZ-1935. Organization should be removed from http://tez.apache.org/team-list.html.
  TEZ-2009. Change license/copyright headers to 2015.
  TEZ-2085. PipelinedSorter should bail out (on BufferOverflowException) instead of retrying continuously.
  TEZ-167. Create tests for MR Combiner.
  TEZ-2080. Localclient should be using tezconf in init instead of yarnconf.
  TEZ-2072. Add missing Private annotation to createDAG in the DAG API class.