@@ -8,6 +8,8 @@ INCOMPATIBLE CHANGES
   TEZ-2176. Move all logging to slf4j. (commons-logging jar no longer part of Tez tar)
 
 ALL CHANGES:
+  TEZ-2264. Remove unused taskUmbilical reference in TezTaskRunner, register as running late.
+  TEZ-2149. Optimizations for the timed version of DAGClient.getStatus.
   TEZ-2213. For the ordered case, enabling pipelined shuffle should automatically disable final merge.
   TEZ-2204. TestAMRecovery increasingly flaky on jenkins builds.
   TEZ-2209. Fix pipelined shuffle to fetch data from any one attempt
